# dagster-sdlc

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  dagster_cloud.yaml  pyproject.toml  requirements.txt  rest_api_strava_pipeline.py  setup.py  strava_pipeline.py  strava_pipeline_rest_config.py  strava_rest_config.duckdb
.github/actions/setup/: action.yml
.github/workflows/: branch_deployments.yml  deploy.yml  uv.yml
analytics_dbt/: .gitignore  dbt_project.yml  profiles.yml
analytics_dbt/macros/: duckdb_snowflake_date_translators.sql  unit_conversion.sql
analytics_dbt/models/marts/: _marts_schema.yml  dim_activities.sql  fct_activities.sql  sport_type_weekly_totals.sql
analytics_dbt/models/reporting/: _dim_activities.yml  _fct_activities.yml  _reporting_schema.yml  _sport_type_weekly_totals.yml  dim_activities.sql  fct_activities.sql  sport_type_weekly_totals.sql
analytics_dbt/models/source/: _src_schema.yml  (+3 more)
analytics_dbt/tests/: test_activity_counts.sql  test_cycling_counts.sql
dagster_proj/: __init__.py  project.py
dagster_proj/assets/: __init__.py  activities.py  dbt.py  energy_prediction.py  weekly_totals.py
dagster_proj/jobs/: __init__.py
dagster_proj/resources/: __init__.py  configured_resources.py
dagster_proj/schedules/: __init__.py
dagster_proj/utils/: __init__.py
dagster_proj_tests/: test_definitions.py  test_utils.py
data/dlt/: strava_pipeline.py  strava_pipeline_rest_config.py
data/dlt_archive/: strava_pipeline.py
dbt_strava/: .user.yml
tmp8dfvccb0/history/: runs.db
tmp8dfvccb0/schedules/: schedules.db
(+15 files in other folders)
