[project]
name = "dagster_proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster-webserver>=1.9.3",
    "dagster>=1.9.3",
    "dbt-duckdb>=1.9.0",
    "dlt[duckdb]>=1.4.0",
    "streamlit>=1.40.1",
    "dagster-duckdb>=0.25.3",
    "dagster-dbt>=0.25.3",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "dagster_proj"
code_location_name = "dagster_proj"
